adjustment to alignment when at smaller scale, cricket button aligned correctly

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -69,7 +69,7 @@ header{
     position: relative;
     text-align: justify;
     margin-bottom: 20px;
-    /* width: 100%; */
+    width: 100%;
 }
 .mainRight{
     float: right;
@@ -79,7 +79,7 @@ header{
     position: relative;
     text-align: justify;
     margin-bottom: 20px;
-    /* width: 100%; */
+    width: 100%;
 }
 .leftWords, .rightWords{
     width: 60%;
@@ -99,6 +99,7 @@ header{
 .rightWords h3{
     text-align: right;
 }
+
 #me, #css{
     float: left;
     position: relative;
@@ -121,13 +122,19 @@ header{
     padding: 0 60px;
     height:150px;
 }
+.divCricket{
+    margin: 0 auto;
+}
 #cricket{
     height: 227px;
     width: 227px;
     border: none;
     align-self: center;
     margin: 0 auto;
+
+
 }
+
 footer{
     position: relative;
     margin-top: 5%;
